# aimeter

./: CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: model_comparison.py
src/agentmeter/: __init__.py  config.py  cost.py  outcome.py  report.py  tracker.py  types.py
src/agentmeter/adapters/: anthropic.py  generic.py  openai.py
src/agentmeter/exporters/: _base.py  console.py  memory.py
src/aimeter/: __init__.py  config.py  cost.py  outcome.py  performance.py  report.py  tracker.py  types.py
src/aimeter/adapters/: anthropic.py  gemini.py  generic.py  openai.py
src/aimeter/exporters/: _base.py  console.py  memory.py
tests/: conftest.py  test_config.py  test_cost.py  test_outcome.py  test_performance.py  test_report.py  test_tracker.py  test_types.py
tests/adapters/: test_anthropic.py  test_gemini.py  test_generic.py  test_openai.py
tests/exporters/: test_console.py  test_memory.py
